--- a/share/xblock_obfuscation_config.yml
+++ b/share/xblock_obfuscation_config.yml
@@ -1,6 +1,5 @@
 fields:
 - graded
-# - annotation_token_secret
 - giturl
 - edxnotes
 - source_file
@@ -14,15 +13,10 @@ fields:
 - tags
 - due
 - start
-# - xml_attributes
 - days_early_for_beta
 - max_attempts
 - text_customization
-- parent
 - format
-# - matlab_api_key
-# - xqa_key
-# - annotation_storage_url
 - use_latex_compiler
 - video_bumper
 - static_asset_path
@@ -33,28 +27,26 @@ fields:
 - rerandomize
 - user_partitions
 - graceperiod
-- edxnotes_visibility
 - visible_to_staff_only
 - url_name
 - parent_url
+exclude_fields:
+- annotation_token_secret # API key for the annotation service
+- xml_attributes # misc fields that needed to be serialized, not clear to me this won't contain secrets
+- matlab_api_key # API key for communicating with Matlab
+- xqa_key # not sure what this is, but it looks like it could be an API key
+- annotation_storage_url # not sure if secrets are included in the query string here or not
 xblocks:
   assets:
     fields: []
   about:
     fields:
+    - data
     - editor
     - source_code
-#  acid:
-#    fields:
-#    - settings
-#  acid_parent:
-#    fields:
-#    - settings
-#    has_children: true
   annotatable:
-    fields: []
-#  book:
-#    fields: []
+    fields:
+    - data
   chapter:
     fields:
     - is_entrance_exam
@@ -66,6 +58,8 @@ xblocks:
     has_children: true
   conditional:
     fields:
+    - sources_list
+    - show_tag_list
     - is_entrance_exam
     - is_time_limited
     - exam_review_rules
@@ -135,11 +129,9 @@ xblocks:
     - cert_name_short
     - cert_html_view_enabled
     - discussion_blackouts
-#    - video_upload_pipeline
     - cohort_config
     - enable_subsection_gating
     - css_class
-#    - lti_passports
     - allow_anonymous_to_peers
     - self_paced
     - enable_ccx
@@ -147,22 +139,29 @@ xblocks:
     - is_practice_exam
     - org
     - course
+    - wiki_slug
+    - grading_policy
+    - license
+    - textbooks
+    exclude_fields:
+    - lti_passports # contains LTI shared secrets
+    - video_upload_pipeline # contains an API key for the video pipeline
     has_children: true
   course_info:
     fields:
     - editor
     - source_code
-#  crowdsource_hinter:
-#    fields: []
-#    has_children: true
+    - items
+    - data
   custom_tag_template:
-    fields: []
+    fields:
+    - data
   customtag:
-    fields: []
-#  discuss:
-#    fields: []
+    fields:
+    - data
   discussion:
     fields:
+    - data
     - sort_key
     - discussion_category
     - discussion_target
@@ -175,25 +174,20 @@ xblocks:
     fields:
     - grace_period
     - attempts
+    - is_configured
+    - related_assessment
   edx_sga:
     fields:
     - weight
     - points
     - staff_score
   error:
-    fields: []
-#  google-calendar:
-#    fields:
-#    - default_view
-#    - calendar_id
-#  google-document:
-#    fields:
-#    - embed_code
-#    - alt_text
-#  hidden:
-#    fields: []
+    fields:
+    - error_msg
+    - contents
   html:
     fields:
+    - data
     - source_code
     - editor
     - filename
@@ -201,6 +195,7 @@ xblocks:
     fields: []
   imageannotation:
     fields:
+    - data
     - instructor_tags
     - annotation_mode
     - instructor_email
@@ -254,11 +249,29 @@ xblocks:
     - allow_latex
     - submission_start
     - submission_due
+    - rubric_feedback_default_text
+    - prompt
+    - leaderboard_show
+    - title
+    - file_upload_type_raw
+    - white_listed_file_types
+    - rubric_criteria
+    - allow_file_upload
+    - rubric_feedback_prompt
+    - editor_assessments_order
+    - rubric_assessments
   poll:
     fields:
     - answers
+    - display_name
+    - private_results
+    - question
+    - max_submissions
+    - feedback
   poll_question:
-    fields: []
+    fields:
+    - question
+    - answers
   problem:
     fields:
     - attempts
@@ -267,6 +280,7 @@ xblocks:
     - submission_wait_seconds
     - source_code
     - force_save_button
+    - data
     has_children: false
   problemset:
     fields:
@@ -286,14 +300,6 @@ xblocks:
     - default_time_limit_minutes
     - is_practice_exam
     has_children: true
-#  rate:
-#    fields:
-#    - p
-#    - prompts
-#  raw:
-#    fields: []
-  recommender:
-    fields: []
   section:
     fields: []
   sequential:
@@ -305,8 +311,6 @@ xblocks:
     - default_time_limit_minutes
     - is_practice_exam
     has_children: true
-#  slides:
-#    fields: []
   split_test:
     fields:
     - is_entrance_exam
@@ -315,17 +319,26 @@ xblocks:
     - is_proctored_enabled
     - default_time_limit_minutes
     - is_practice_exam
+    - group_id_to_child
+    - user_partition_id
     has_children: true
   static_tab:
     fields:
+    - data
     - editor
     - source_code
   survey:
     fields:
     - answers
     - questions
+    - display_name
+    - private_results
+    - block_name
+    - max_submissions
+    - feedback
   textannotation:
     fields:
+    - data
     - instructor_tags
     - diacritics
     - annotation_mode
@@ -337,6 +350,8 @@ xblocks:
     has_children: true
   video:
     fields:
+    - data
+    - license
     - youtube_id_1_25
     - show_captions
     - sub
@@ -356,35 +371,9 @@ xblocks:
     - edx_video_id
     - youtube
     has_children: false
-#  videoalpha:
-#    fields:
-#    - youtube_id_1_25
-#    - show_captions
-#    - sub
-#    - youtube_id_0_75
-#    - youtube_id_1_0
-#    - source
-#    - only_on_web
-#    - youtube_id_1_5
-#    - download_video
-#    - track
-#    - start_time
-#    - html5_sources
-#    - handout
-#    - download_track
-#    - end_time
-#    - transcripts
-#    - edx_video_id
-#  videoannotation:
-#    fields:
-#    - sourceurl
-#    - annotation_mode
-#    - poster_url
-#    - instructor_email
-#  videodev:
-#    fields: []
   videosequence:
     fields:
+    - data
     - is_entrance_exam
     - is_time_limited
     - exam_review_rules
@@ -394,6 +383,7 @@ xblocks:
     has_children: true
   word_cloud:
     fields:
+    - data
     - num_inputs
     - num_top_words
     - display_student_percents
@@ -404,3 +394,85 @@ xblocks:
   wiki:
     fields:
     - slug
+exclude_xblocks:
+  acid:  # this is a debugging block
+    fields:
+    - content
+    - enabled_fields
+    - settings
+  acid_parent:  # this is a debugging block
+    fields:
+    - content
+    - enabled_fields
+    - settings
+    has_children: true
+  book:  # not frequently used
+    fields: []
+  crowdsource_hinter:  # not frequently used
+    fields:
+    - mod_queue
+    - debug
+    - hint_pk
+    - moderate
+    - data
+    - hints
+    has_children: true
+  discuss:  # not frequently used
+    fields: []
+  google-calendar:  # unsure if safe
+    fields:
+    - default_view
+    - calendar_id
+  google-document:  # unsure if safe
+    fields:
+    - embed_code
+    - alt_text
+  hidden:  # not frequently used
+    fields:
+    - data
+  rate:  # not frequently used
+    fields:
+    - display_name
+    - p
+    - prompts
+  raw:  # not frequently used
+    fields:
+    - data
+  recommender:  # not frequently used
+    fields:
+    - client_configuration
+    - default_recommendations
+    - version
+    - intro_enabled
+  slides:  # not frequently used
+    fields: []
+  videoalpha:  # not frequently used
+    fields:
+    - data
+    - license
+    - youtube_id_1_25
+    - show_captions
+    - sub
+    - youtube_id_0_75
+    - youtube_id_1_0
+    - source
+    - only_on_web
+    - youtube_id_1_5
+    - download_video
+    - track
+    - start_time
+    - html5_sources
+    - handout
+    - download_track
+    - end_time
+    - transcripts
+    - edx_video_id
+  videoannotation: # not frequently used
+    fields:
+    - data
+    - sourceurl
+    - annotation_mode
+    - poster_url
+    - instructor_email
+  videodev: # not frequently used
+    fields: []
