--- a/share/xblock_obfuscation_config.yml
+++ b/share/xblock_obfuscation_config.yml
@@ -1,6 +1,5 @@
 fields:
 - graded
-- giturl
 - edxnotes
 - source_file
 - course_edit_method
@@ -36,6 +35,7 @@ exclude_fields:
 - matlab_api_key # API key for communicating with Matlab
 - xqa_key # not sure what this is, but it looks like it could be an API key
 - annotation_storage_url # not sure if secrets are included in the query string here or not
+- giturl # url may contain secrets
 xblocks:
   assets:
     fields: []
@@ -69,7 +69,6 @@ xblocks:
     has_children: true
   course:
     fields:
-    - remote_gradebook
     - course_survey_name
     - teams_configuration
     - enable_timed_exams
@@ -98,7 +97,6 @@ xblocks:
     - no_grade
     - catalog_visibility
     - entrance_exam_enabled
-    - certificates
     - pre_requisite_courses
     - advertised_start
     - default_time_limit_minutes
@@ -124,7 +122,6 @@ xblocks:
     - hide_progress_tab
     - exam_review_rules
     - cosmetic_display_price
-    - ccx_connector
     - issue_badges
     - cert_name_short
     - cert_html_view_enabled
@@ -147,6 +144,9 @@ xblocks:
     exclude_fields:
     - lti_passports # contains LTI shared secrets
     - video_upload_pipeline # contains an API key for the video pipeline
+    - remote_gradebook # we aren't sure if this is safe or not
+    - certificates # contains potentially sensitive info like signatures of university administrators
+    - ccx_connector # points to random private servers
     has_children: true
   course_info:
     fields:
@@ -199,7 +199,8 @@ xblocks:
     - data
     - instructor_tags
     - annotation_mode
-    - instructor_email
+    exclude_fields:
+    - instructor_email # we'd rather not share the instructor's email address
   library:
     fields:
     - advanced_modules
@@ -216,7 +217,6 @@ xblocks:
   lti:
     fields:
     - description
-    - custom_parameters
     - weight
     - ask_to_send_email
     - accept_grades_past_due
@@ -224,13 +224,14 @@ xblocks:
     - has_score
     - hide_launch
     - open_in_a_new_page
-    - launch_url
-    - lti_id
     - ask_to_send_username
+    exclude_fields:
+    - lti_id # may contain secrets
+    - custom_parameters # unclear what this is
+    - launch_url # might contain secrets
   lti_consumer:
     fields:
     - description
-    - custom_parameters
     - inline_height
     - weight
     - ask_to_send_username
@@ -241,9 +242,11 @@ xblocks:
     - hide_launch
     - launch_target
     - modal_width
-    - launch_url
     - modal_height
-    - lti_id
+    exclude_fields:
+    - lti_id # may contain secrets
+    - custom_parameters # unclear what this is
+    - launch_url # might contain secrets
   openassessment:
     fields:
     - weight
@@ -344,7 +347,8 @@ xblocks:
     - diacritics
     - annotation_mode
     - source
-    - instructor_email
+    exclude_fields:
+    - instructor_email # we'd rather not share the instructor's email address
   vertical:
     fields:
     - is_entrance_exam
@@ -420,11 +424,11 @@ exclude_xblocks:
     has_children: true
   discuss:  # not frequently used
     fields: []
-  google-calendar:  # unsure if safe
+  google-calendar:  # not frequently used
     fields:
     - default_view
     - calendar_id
-  google-document:  # unsure if safe
+  google-document:  # not frequently used
     fields:
     - embed_code
     - alt_text
