--- a/setup.cfg
+++ b/setup.cfg
@@ -69,6 +69,8 @@ edx.analytics.tasks =
     events_obfuscation = edx.analytics.tasks.events_obfuscation:ObfuscateCourseEventsTask
     obfuscation = edx.analytics.tasks.obfuscation:ObfuscatedCourseTask
 
+    invalid-opaque-keys = edx.analytics.tasks.tools:FindInvalidOpaqueKeys
+
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
     local = luigi.hadoop:LocalJobRunner
