--- a/config/test.cfg
+++ b/config/test.cfg
@@ -58,7 +58,7 @@ output_root = s3://fake/activity/
 interval_start = 2013-11-01
 overwrite_n_days = 14
 
-[location_per_course]
+[location-per-course]
 interval_start = 2013-11-01
 overwrite_n_days = 14
 
