--- a/config/test.cfg
+++ b/config/test.cfg
@@ -53,6 +53,7 @@ path = /tmp/fake/manifest/
 
 [user-activity]
 output_root = s3://fake/activity/
+overwrite_n_days = 14
 
 [enrollments]
 interval_start = 2013-11-01
